exclude jSerial module info from fat jar